@@ -1,8 +1,30 @@
 import org.gradle.internal.jvm.Jvm
+import org.robolectric.gradle.AndroidSdk
 
 plugins {
   alias(libs.plugins.robolectric.deployed.java.module)
   alias(libs.plugins.robolectric.java.module)
+}
+
+// The `errorprone` library now needs some additional exports to allow it to
+// perform reflections. The flags passed to the JVM are from the errorprone
+// documentation: https://errorprone.info/docs/installation.
+tasks.compileJava.configure {
+  options.compilerArgs.addAll(
+    listOf(
+      "--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
+      "--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
+      "--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
+      "--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
+      "--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
+      "--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
+      "--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
+      "--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
+      "--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+      "--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+      "--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
+    )
+  )
 }
 
 // Disable annotation processor for tests
@@ -26,10 +48,8 @@ dependencies {
   annotationProcessor(libs.error.prone.core)
 
   // In JDK 9, tools.jar disappears!
-  val toolsJar = Jvm.current().getToolsJar()
-  if (toolsJar != null) {
-    "compile"(files(toolsJar))
-  }
+  val toolsJar: File? = Jvm.current().getToolsJar()
+  toolsJar?.let { "compile"(files(it)) }
 
   // Testing dependencies
   testImplementation(libs.junit4)
